--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="com.brandnew.greatlauncher">
 
     <application
+        android:name="com.brandnew.greatlauncher.MyApplication"
         android:allowBackup="true"
+        android:launchMode="singleTask"
         android:icon="@mipmap/ic_launcher_new"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_new"
@@ -37,6 +39,10 @@
             >
 
         </activity>
+
+
     </application>
+
+
 
 </manifest>
